# IncreUpdate

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/qukakac/net/qqq/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bzip/: bzlib.c  bzlib.h  crctable.c
app/src/main/java/qukakac/net/qqq/: MainActivity.java  UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/qukakac/net/qqq/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
